Enable -Werror for the core module